@@ -81,7 +81,9 @@ public class TestRecoveryHdfs extends SolrTestCaseJ4 {
     
     try {
       URI uri = new URI(hdfsUri);
-      fs = FileSystem.newInstance(uri, new Configuration());
+      Configuration conf = new Configuration();
+      conf.setBoolean("fs.hdfs.impl.disable.cache", true);
+      fs = FileSystem.get(uri, conf);
     } catch (IOException | URISyntaxException e) {
       throw new RuntimeException(e);
     }
